--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 											<li><a href="https://bbez-sciunion.notion.site/39eda4e3b5d0433186490b36653050a8?v=2e096ac1e2de49e3aea072b88fb2a164">社团主页</a></li>
 											<li><a href="https://bbez-sciunion.notion.site/668b177bb7524da780b0576763b400e6">社团介绍</a></li>
 											<li><a href="https://bbez-sciunion.notion.site/323c5ffa70514692ba2f10d380aa40d1">风采展示</a></li>
-											<li><a href="about:blank">加入我们</a></li>
+											<li><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=VXT4-_1viTxoT2vw-vloeYYWwyOYVHj3&authKey=liHOqEMqFNaJ7eMQcsrd6EUpz">加入我们</a></li>
 											<li><a href="https://skin.bbez-sciunion.top">内部MC服务器</a></li>
 										</ul>
 									</div>
@@ -144,7 +144,7 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://bbez-sciunion.notion.site/39eda4e3b5d0433186490b36653050a8?v=2e096ac1e2de49e3aea072b88fb2a164" class="button fit primary">前往主页</a></li>
-								<li><a href="about:blank" class="button fit">加入我们</a></li>
+								<li><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=VXT4-_1viTxoT2vw-vloeYYWwyOYVHj3&authKey=liHOqEMqFNaJ7eMQcsrd6EUpz" class="button fit">加入我们</a></li>
 							</ul>
 						</div>
 					</section>
