--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                                   <meta name="robots" content="none" />
                                   <meta name="robots" content="none">
 		<link rel="stylesheet" href="assets/css/main.css" />
-                                  <link rel="icon" href="./favicon.ico">
+                                  <link rel="icon" href="favicon.ico">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
