--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 							<p>BBEZ科技联合会<br />
 							——<br />
 							BBEZ最具科技感的社团</p>
-							<ul class="actions special">
-								<li><a href="https://bbez-sciunion.notion.site/39eda4e3b5d0433186490b36653050a8?v=2e096ac1e2de49e3aea072b88fb2a164" class="button primary">前往主页</a></li>
+							<ul class="actions stacked">
+								<li><a href="https://bbez-sciunion.notion.site/39eda4e3b5d0433186490b36653050a8?v=2e096ac1e2de49e3aea072b88fb2a164" class="button fit primary">查看主页</a></li>
+								<li><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=VXT4-_1viTxoT2vw-vloeYYWwyOYVHj3&authKey=liHOqEMqFNaJ7eMQcsrd6EUpz" class="button fit">加入我们</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">了解更多</a>
@@ -62,8 +63,8 @@
 								<h2>科技联合会社团简介</h2>
 								<p></br>BBEZ科技联合会是一个充满活力与创新的学生社团，由物理部、化学部、生物部和信息部四个部门组成。各部门各司其职，专注于不同的学科领域，旨在为同学们提供一个探索科学、实践创新的平台。</br></br>
 								蚌埠二中社团强，
-						    	              物理探秘立纲常。</br>
-		             						化学实验百花放，
+						    	        物理探秘立纲常。</br>
+		             				        化学实验百花放，
 								生物剖解细察详。</br>
 								信息编程展技长，
 								四部同心如一家。</br>
@@ -152,7 +153,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-qq"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-qq"><span class="label">QQ</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; BBEZ科技联合会 2024 ~ <script>var currentYear = new Date().getFullYear(); document.write(currentYear);</script> All rights reserved.</li><li>模板来自<a href="http://html5up.net">HTML5 UP</a></li>
