--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>欢迎访问BBEZ科技联合会官网！</h2>
-							<p>BBEZ科技联合会<br />
-							——<br />
-							BBEZ最具科技感的社团</p>
+							<p>BBEZ最具科技感的社团</p>
 							<ul class="actions stacked">
 								<li><a href="https://bbez-sciunion.notion.site/39eda4e3b5d0433186490b36653050a8?v=2e096ac1e2de49e3aea072b88fb2a164" class="button fit primary">查看主页</a></li>
 								<li><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=VXT4-_1viTxoT2vw-vloeYYWwyOYVHj3&authKey=liHOqEMqFNaJ7eMQcsrd6EUpz" class="button fit">加入我们</a></li>
